--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -17,7 +17,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:id="@+id/categoryTitle"
+            android:id="@+id/categoryTitleEditText"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -27,10 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/addButton"
-            android:id="@+id/button2"
+            android:id="@+id/addCategoryButton"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/categoryTitle"
-            android:layout_toEndOf="@+id/categoryTitle" />
+            android:layout_toRightOf="@+id/categoryTitleEditText"
+            android:layout_toEndOf="@+id/categoryTitleEditText" />
     </LinearLayout>
 
     <ListView
