--- a/app/src/main/res/layout/fragment_purchases.xml
+++ b/app/src/main/res/layout/fragment_purchases.xml
@@ -11,9 +11,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="140dp"
+        android:minHeight="180dp"
         android:orientation="vertical"
-        android:background="#607D8B">
+        android:background="@color/colorPrimary">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:textColor="#FFF"
             android:textSize="21dp"
             android:textIsSelectable="true"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="25dp" />
 
         <TextView
             android:layout_width="match_parent"
